Self assembly traits nerfhammer+tech changes

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -4,6 +4,10 @@
  TRAIT_INVASIVE_EFFECT: "§EPer §YNon-Plantoid §RNegative§!§! trait selected:§!\n - Habitability, Growth and Assembly: §G+5%§!\n\n§EPer §YNon-Plantoid §GPositive§!§! trait selected:§!\n - Habitability, Growth and Assembly: §R-2.5%§!\n\n§EPlantoid traits count as negative traits, providing bonuses§!"
 	#OLD_TRAIT_INVASIVE_EFFECT: "§YCan only select negative or botanical traits§!\n\nHabitability: §G+5%§! for each negative trait selected\nPop Growth Speed: §G+5%§! for each negative trait selected"
 
+ TRAIT_PLANTOID_BUDDING_EFFECT_EVOLVED:1 "Each pop working as a slave or better produces 0.02 £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\nPop $tec_loc_basic_resources$ Upkeep: §R+0.20§!\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
+ TRAIT_LITHOID_BUDDING_EFFECT_EVOLVED:0 "$TRAIT_PLANTOID_BUDDING_EFFECT$\nPop $tec_loc_basic_resources$ Upkeep: §R+0.20§!\n\nThe §H$trait_lithoid$ Trait§! modifies this trait's effects."
+ TRAIT_TIYANKI_BUDDING_EFFECT_EVOLVED:0 "Each pop working as a slave or better produces 0.05 £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\nPop $tec_loc_basic_resources$ Upkeep: §R+0.3§!\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
+
 # /
 
 
@@ -13,7 +17,7 @@
 
 	trait_tec_lithoid_sedimentary:0 "Sedimentary Aggregation"
 	trait_tec_lithoid_sedimentary_desc:0 "§LThis Lithoid species is generally composed by the selective aggregation of inert material around an evergrowing core, that also adapt itself to produce offspring in the same manner.§!\n"
-	TRAIT_TEC_LITHOID_SEDIMENTARY_EFFECT:0 "New colonies will have up to §Y3§! extra £blocker£ Lithoid Blockers that can be cleared for additional §YLithoid Pops§!.\nEach pop produces 0.1 £job_tec_cloner£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!"
+	TRAIT_TEC_LITHOID_SEDIMENTARY_EFFECT:0 "New colonies will have up to §Y3§! extra £blocker£ Lithoid Blockers that can be cleared for additional §YLithoid Pops§!.\nEach pop produces 0.1 £job_tec_cloner£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!\nPop $tec_loc_minerals$ Upkeep: §R+0.30§!"
 
 	# Additional unique traits
 	trait_tec_cryptobiotic:0 "Cryptobiosis"
@@ -117,7 +121,7 @@
 
 	trait_tec_robot_fractal:0 "Fractal Replication"
 	trait_tec_robot_fractal_desc:0 "§LThese artificial units are composed of a myriad of sub-units that operate as a portable array of maintenance, reparation and assembly.§!\n"
-	TRAIT_ROBOT_FRACTAL_EFFECT:0 "Each pop working as a slave or better produces 0.02 £job_roboticist£ §Y$MOD_PLANET_POP_ASSEMBLY_ADD$§!"
+	TRAIT_ROBOT_FRACTAL_EFFECT:0 "Each pop working as a slave or better produces 0.02 £job_roboticist£ §Y$MOD_PLANET_POP_ASSEMBLY_ADD$§!\nPop Amenities Upkeep: §R+0.20§!"
 
 
 # Unique - yellow
@@ -1165,8 +1169,8 @@
 	trait_tec_replicant_budding:0 "Enhanced Bioprinting"
 	trait_tec_replicant_budding_desc:0 "§LSeveral nanocomposites and biomechanical adaptations allow a flexible method of reproduction by direct pseudo-replication of the original template of this species.§!"
 	mod_trait_tec_replicant_budding_tooltip:0 "[trait_tec_replicant_budding_block]" 
-	trait_tec_replicant_budding_effect_standard:0 "Each replicant pop working as a slave or better produces §G0.02§! £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
-	trait_tec_replicant_budding_effect_upgraded:0 "§EUpgraded Trait§!\nEach replicant pop working as a slave or better produces §G0.04§! £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
+	trait_tec_replicant_budding_effect_standard:0 "Each replicant pop working as a slave or better produces §G0.02§! £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\nPop $tec_loc_basic_resources$ Upkeep: §R+0.20§!\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
+	trait_tec_replicant_budding_effect_upgraded:0 "§EUpgraded Trait§!\nEach replicant pop working as a slave or better produces §G0.04§! £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\nPop $tec_loc_basic_resources$ Upkeep: §R+0.40§!\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
 
 	# +10% basic and industrial resources
 	trait_tec_replicant_capacitor:0 "Nano-Capacitors"
