--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -70,6 +70,7 @@
 	tec_loc_living_metal:0 "£sr_living_metal£ $sr_living_metal$"
 	tec_loc_nanites:0 "£nanites£ $nanites$"
 	tec_loc_zro:0 "£sr_zro£ $sr_zro$"
+	tec_loc_dark_matter:0 "£sr_dark_matter£ $sr_dark_matter$"
 
 	tec_loc_codebreaking:0 "$MOD_INTEL_DECRYPTION_ADD$"
 	tec_loc_encryption:0 "$MOD_INTEL_ENCRYPTION_ADD$"
