Several adjustments and fixes

--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -167,7 +167,7 @@
 		councilor_civic_tec_regular_patronage:0 "Talent Seeker"
 		councilor_civic_tec_regular_patronage_female:0 "$councilor_civic_tec_regular_patronage$"
 		councilor_civic_tec_regular_patronage_desc:0 "$TITLE$s have the task of finding new talents among promotions and young promises."
-		councilor_civic_tec_regular_patronage_custom_modifier:0 "- $MOD_COUNTRY_LEADER_CAP_ADD$: §G+$@councilor_civic_tec_regular_patronage_bonus$§!\n$MOD_LEADER_SPECIES_EXP_GAIN$: §G+2.5%§!"
+		councilor_civic_tec_regular_patronage_custom_modifier:0 "$MOD_LEADER_SPECIES_EXP_GAIN$: §G+2.5%§!"
 
 		councilor_civic_tec_regular_surface_exploiters:0 "Extraction Monitor"
 		councilor_civic_tec_regular_surface_exploiters_female:0 "$councilor_civic_tec_regular_surface_exploiters$"
