--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -110,7 +110,7 @@
 	tr_tec_control_finish_effect:4 ""
 
 	tr_tec_control_1:0 "Firm Purpose"
-	tr_tec_control_1_tooltip:0 "Rulers and Officials will never get the §RArrested Development§! trait."
+	tr_tec_control_1_tooltip:0 "Leaders assigned as §YCouncilors§! or §YGovernors§! will never get the §RArrested Development§! trait."
 	tr_tec_control_1_delayed:0 "Whoever control entire sectors must be above the natural order and restrictions, only controlled by their will and potential capacities, so a existence of self-improvement and learning will open the path to a better administrative work."
 
 	tr_tec_control_2:0 "State Secrets"
