more fixes + destiny trait changes

--- a/localisation/english/zz_evolved_leaders_l_english.yml
+++ b/localisation/english/zz_evolved_leaders_l_english.yml
@@ -35,6 +35,14 @@
 	mod_tec_scientist_not_count_towards_leader_cap: "$scientist_plural_with_icon$ do $tec_not_count_towards_leader_cap$"
  # /
 #/
+
+# Overwrite
+# ------------------------------------------------------------
+ leader_trait_bureaucrat_2:0 "$leader_trait_bureaucrat$ II"
+ leader_trait_bureaucrat_2_desc:0 "$leader_trait_bureaucrat_desc$"
+ leader_trait_bureaucrat_2_tt: "$leader_trait_bureaucrat_tt$\n\n§E§Y£sector£ Sector§! Effects per Skill Level:§!$TABBED_NEW_LINE$$mod_planet_jobs_unity_produces_mult$: §G+2.5%§!"
+# /
+
 # Traits
 # ------------------------------------------------------------
  # --------------- Destiny gestalt
