--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -46,7 +46,7 @@
 
 	TEC_AUTH_DIRECT_DEMOCRATIC_TYPES: "['concept_tec_authority_type_democratic_type']"
 	TEC_AUTHORITY_ELECTION_DIRECT_DEMOCRATIC:0 "§HElection Type:§!\n- Holds an election every §Y5§! years to select a new Ruler.\n- Re-elections are not allowed.\n- Can §RNOT DO§! emergency elections."
-	TEC_AUTH_DIRECT_DEMOCRATIC_RULER_MECHANIC:0 "§HExclusive Mechanic:§!\n- Elected rulers will gain §G2§! £mod_councilor_skill_add£ §YLevels§! when elected for the 1st time, and §G1§! £mod_councilor_skill_add£ §YLevel§! and §G+50%§! Experience Gain during its legislature.\n- This effect is disabled for emergency elections."
+	TEC_AUTH_DIRECT_DEMOCRATIC_RULER_MECHANIC:0 "§HExclusive Mechanic:§!\n- All the councilors will gain §G100§! £mod_councilor_skill_add£ §YExperience§! after finishing an election, and the country will gain §G+25%§! §Y$MOD_COUNCIL_AGENDA_PROGRESS_SPEED$§! during §Y2§! years.\n- This effect is disabled for emergency elections."
 
 	auth_democratic:0 "Democratic"
 	auth_democratic_desc:0 "Democratic governments have regular elections where all citizens can vote on who should represent them."
@@ -54,7 +54,7 @@
 	TEC_AUTH_DEMOCRATIC_TYPES: "['concept_tec_authority_type_democratic_type']"
 	TEC_AUTHORITY_ELECTION_DEMOCRATIC:0 "§HElection Type:§!\n- Holds an election every §Y10§! years to select a new Ruler.\n- Can §RNOT DO§! emergency elections."
 	TEC_AUTH_DEMOCRATIC_BONUS:0 "$TEC_TAG_BONUS$ Resets §YGovernment Reform§! and §YPolicy Cooldowns§! when a new $councilor_ruler_auth_tec_direct_democratic$ is elected."
-	TEC_AUTH_DEMOCRATIC_RULER_MECHANIC:0 "§HExclusive Mechanic:§!\n- Elected rulers will gain §G1§! £mod_councilor_skill_add£ §YLevels§! when elected for the 1st time, and §G+25%§! Experience Gain during its legislature.\n- This effect is disabled for emergency elections."
+	TEC_AUTH_DEMOCRATIC_RULER_MECHANIC:0 "§HExclusive Mechanic:§!\n- Elected rulers will gain §G200§! §Y£mod_councilor_skill_add£ Experience§! when elected for the 1st time, and §G+25%§! Experience Gain during its legislature.\n- This effect is disabled for emergency elections."
 
 	auth_democratic_tt:0 "Resets Government Reform and Policy Cooldowns when a new $councilor_ruler_democratic$ is elected."
 
