--- a/localisation/english/zz_evolved_events_lore_l_english.yml
+++ b/localisation/english/zz_evolved_events_lore_l_english.yml
@@ -106,12 +106,16 @@ tecniactest.6.desc:0 "create a elysium"
  tec_rebalance.611.desc.hive:0 "The initial batch of servant mechanical drones has been created. While it may just be non-pragmatic decision, we can alter their physical form to suit the needs of the collective."
  tec_rebalance.611.neutral:0 "Neutral Template"
  tec_rebalance.611.neutral.tooltip:0 "The crafted robotic species will adopt this appearance"
- tec_rebalance.611.hum:0 "Humanoid Template"
+ tec_rebalance.611.hum:0 "Humanoid Template V1"
  tec_rebalance.611.hum.tooltip:0 "$tec_rebalance.611.neutral.tooltip$"
+ tec_rebalance.611.hum2:0 "Humanoid Template V2"
+ tec_rebalance.611.hum2.tooltip:0 "$tec_rebalance.611.neutral.tooltip$"
  tec_rebalance.611.mam:0 "Mammalian Template"
  tec_rebalance.611.mam.tooltip:0 "$tec_rebalance.611.neutral.tooltip$"
- tec_rebalance.611.rep:0 "Reptilian Template"
+ tec_rebalance.611.rep:0 "Reptilian Template V1"
  tec_rebalance.611.rep.tooltip:0 "$tec_rebalance.611.neutral.tooltip$"
+ tec_rebalance.611.rep2:0 "Reptilian Template V2"
+ tec_rebalance.611.rep2.tooltip:0 "$tec_rebalance.611.neutral.tooltip$"
  tec_rebalance.611.avi:0 "Avian Template"
  tec_rebalance.611.avi.tooltip:0 "$tec_rebalance.611.neutral.tooltip$"
  tec_rebalance.611.art:0 "Arthropoid Template"
