fixed evaluator desc

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -134,12 +134,12 @@
 	job_evaluator_effect_desc:0 "£job_evaluator£ $job_evaluator_plural$ turn §Y$tec_loc_energy$§! into §Y$tec_loc_unity$§!$tec_evaluator_cleanup$ and £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§!."
 	job_evaluator_effect_desc_civic:0 "£job_evaluator£ $job_evaluator_plural$ turn §Y$tec_loc_energy$§! into §Y$tec_loc_unity$§!, bonuses based on the gestalt §YMotivations§! and £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§!."
 	tec_evaluator_cleanup:0 "[Owner.tec_ev_eco_bonus][Owner.tec_ev_relation_bonus][Owner.tec_ev_ego_bonus]"
-	tec_ev_overconsumption_bonus_desc:0 ", §Y£building£ $mod_planet_structures_cost_mult$ Reduction§!"
-	tec_ev_preservation_bonus_desc:0 ", §Y£building£ $mod_planet_structures_upkeep_mult$ Reduction§!"
-	tec_ev_empathy_bonus_desc:0 ", §Y$tec_loc_edict_funds$§!"
-	tec_ev_apathy_bonus_desc:0 ", §Y$tec_loc_crime_gestalt$ Reduction§!"
-	tec_ev_introspective_bonus_desc:0 ", §Y£pop£ $MOD_POP_AMENITIES_USAGE_MULT$ Reduction§!"
-	tec_ev_extrospective_bonus_desc:0 ", §Y$mod_planet_researchers_upkeep_mult$ Reduction§!"
+	tec_ev_overconsumption_bonus_desc:0 ", §Yavailable $tec_loc_housing$§!"
+	tec_ev_preservation_bonus_desc:0 ", §Y$tec_loc_amenities_gestalt$§!"
+	tec_ev_empathy_bonus_desc:0 ", §Y£pop£ Menial and Free individuals output§!"
+	tec_ev_apathy_bonus_desc:0 ", §Y$tec_loc_naval_cap$§!"
+	tec_ev_introspective_bonus_desc:0 ", §Y$tec_loc_edict_funds$§!"
+	tec_ev_extrospective_bonus_desc:0 ", §Y$tec_loc_admin_cap$§!"
 
 	job_bio_trophy_effect_desc:0 "£job_bio_trophy£ $job_bio_trophy_plural$ produce §Y$tec_loc_unity$§! and $mod_planet_jobs_complex_drone_produces_mult$"
 
