--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -952,7 +952,7 @@ l_english:
 
 	building_tec_hab_orbital_autobuilder_building_minor_orbital:0 "Will finish the current §HMinor Orbital§! on §Y[Planet.tec_building_minor_orbital_timer]§!."
 	building_tec_hab_orbital_autobuilder_building_major_orbital:0 "Will finish the current §HMajor Orbital§! on §Y[Planet.tec_building_major_orbital_timer]§!."
-	building_tec_hab_orbital_autobuilder_building_no_orbital:0 "§RThere are no possible orbitals to build at the moment.\n§YUpkeep is disabled§!.§!\nRechecking on §Y[Planet.tec_building_no_orbital_timer]§!."
+	building_tec_hab_orbital_autobuilder_building_no_orbital:0 "§RThere are no suitable planetoids for orbitals at the moment.\n§YUpkeep is disabled§!.§!\nRechecking on §Y[Planet.tec_building_no_orbital_timer]§!."
 
 	building_tec_hab_orbital_autobuilder_current_orbitals:0 "\nThe §Y[solar_system.GetName]§! System can support: $TABBED_NEW_LINE$ Major Orbitals: §Y[solar_system.GetNumMajorOrbitals]/[solar_system.GetMaxMajorOrbitals]§! $TABBED_NEW_LINE$ Minor Orbitals: §Y[solar_system.GetNumMinorOrbitals]/[solar_system.GetMaxMinorOrbitals]§!"
 
