--- a/localisation/english/replace/!_evolved_to_do_R8_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R8_l_english.yml
@@ -2,6 +2,29 @@
 #R8 - ??? Patch
 
 # ------------------------------------------------- Civics
+# --------------- Other
+	# Runes
+	civic_tec_runecarvers:0 "Mystical Runecarvers"
+	civic_tec_runecarvers_desc:0 "TO DO"
+	civic_tec_runecarvers_tooltip:0 "Allows Runecarving traits, runecarving traits change based on the ascension - Runecarved building&job"
+
+	# Exemplar knights
+	civic_tec_exemplar_knights:0 "Exemplar Knights"
+	civic_tec_exemplar_knights_desc:0 "TO DO"
+	civic_tec_exemplar_knights_tooltip:0 "Capital replace politicians with exemplar knights, exemplar knights change based on the planet designation, special building for providing more (order of whatever)"
+
+	# MOVE TO localisation\english\replace\zz_evolved_civics_l_english.yml
+	#civic_tec_foundation_solarpunk:0 "Paradisiacal Architects"
+	#civic_tec_foundation_solarpunk_desc:0 "TO DO"
+	#civic_tec_foundation_solarpunk_tooltip:0 "Replace building art"
+
+	# MOVE TO localisation\english\replace\zz_evolved_civics_l_english.yml
+	#civic_tec_foundation_cyberpunk:0 ""
+	#civic_tec_foundation_cyberpunk_desc:0 "TO DO"
+	#civic_tec_foundation_cyberpunk_tooltip:0 "Replace building art"
+
+
+
 # --------------- Origin
 
 # --------------- Regular
