--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -2212,26 +2212,37 @@
 	civic_tec_hive_eusocial_desc:0 "['concept_tec_brood_capital_civic']\n\nWhile united under the same consciousness, this species has evolved and thrived thanks to the mutual collaboration of every member of the hive, with a strong cooperative brood care, overlapping generations within a colony of adults, and a division of labor into reproductive and non-reproductive groups, creating specialized castes that propers a unitary development and prosperous future for every member."
 	civic_tec_hive_eusocial_tooltip:0 "$tec_loc_c_unlocks_job$ §H£job_tec_broodqueen_drone£ Brood Progenitors§!\n- £building£ Capital Buildings replace §Yall§! their §Y$tec_loc_unity$ Drone§! jobs with a single ['concept_tec_ruler_job_tec_broodqueen_drone_icon'] and various ['concept_tec_ruler_job_tec_broodlord_drone_plural_icon'] increased by §Y$tec_loc_capital_tier$§! and §Y$tec_loc_planet_ascension_plural$§!.\n\n$tec_loc_c_unlocks_feature$ §H£mod_pop_growth_speed£ Mutual Structuring§!\n- Each §Y£job_tec_broodlord_drone£ $job_tec_broodlord_drone$§! increase the production and upkeep of the planet §Y£job_tec_broodqueen_drone£ $job_tec_broodqueen_drone$§!\nCreating an external source of £pop£ Pop Assembly will make £job_tec_broodqueen_drone£ $job_tec_broodqueen_drone_plural$ produce a small amount of £mod_pop_growth_speed£ Pop growth instead.\n\n$tec_loc_c_restriction$ §RForbids§! £building£ Spawning Pools\n"
 
-	civic_tec_hive_overminds:0 "§G£tec_civic_ruler£§!Subservient Overminds"
-	civic_tec_hive_overminds_desc:0 "['concept_tec_brood_capital_civic']\n\nThis collective derivates a relatively high amount of control power to specificially control drones, which have the task to control all the lesser ones at a planetary scale. Generally this produces a remarked separation between castes of drones, conforming a strong but diversified collective."
-	civic_tec_hive_overminds_tooltip:0 "$tec_loc_c_unlocks_job$ §H£job_tec_overmind_drone£ Overminds§!\n- £building£ Capital Buildings replace §Yall§! their £job_synapse_drone£ §Y$tec_loc_unity$ Drone§! jobs with a single ['concept_tec_ruler_job_tec_overmind_drone_icon'].\n\n$tec_loc_c_unlocks_feature$ §H£unity£ Controlling Grasp§!\n- £job_patrol_drone£ §YAnti-Crime§! drones are twice as effective at reducing £crime£ §YDeviancy§!.\n\n$tec_loc_c_unlocks_feature$ §H£influence£ Hegemonic Influence§!\n- Can use ['concept_hegemony_federation'] Federation Type."
-	# Protominds boost a central Overmind
+	civic_tec_hive_brood_overminds:0 "§G£tec_civic_ruler£§!Subservient Overminds"
+	civic_tec_hive_brood_overminds_desc:0 "['concept_tec_brood_capital_civic']\n\nThis collective derivates a relatively high amount of control power to specificially control drones, which have the task to control all the lesser ones at a planetary scale. Generally this produces a remarked separation between castes of drones, conforming a strong but diversified collective."
+	civic_tec_hive_brood_overminds_tooltip:0 "$tec_loc_c_unlocks_job$ §H£job_tec_overmind_drone£ Overminds§!\n- £building£ Capital Buildings provide a single ['concept_tec_ruler_job_tec_overmind_drone_icon'].\n\n$tec_loc_c_unlocks_feature$ §H£unity£ Controlling Grasp§!\n- £job_patrol_drone£ §YAnti-Crime§! drones are twice as effective at reducing £crime£ §YDeviancy§!.\n\n$tec_loc_c_unlocks_feature$ §H£influence£ Hegemonic Influence§!\n- Can use ['concept_hegemony_federation'] Federation Type."
+	# Capitals add overminds, overmind changes its type based on colony type and boost jobs
 
-	civic_tec_hive_cybernetic_overmind:0 "§G£tec_civic_ruler£§!Subservient Adjutants"
-	civic_tec_hive_cybernetic_overmind_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
-	civic_tooltip_tec_hive_cybernetic_overmind_effects:0 "TO DO"
-	# Adjutant jobs boost a central drone
+	civic_tec_hive_brood_overminds_cyborg:0 "§G£tec_civic_ruler£§!Subservient Adjutants"
+	civic_tec_hive_brood_overminds_cyborg_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
+	civic_tec_hive_brood_overminds_cyborg_tooltip:0 "TO DO"
+	# Capitals add adjutants, adjutants changes its type based on colony type boosting the job
 
-	civic_tec_hive_swarmlords:0 "§G£tec_civic_ruler£§!Subservient Overminds"
-	civic_tec_hive_swarmlords_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
-	civic_tec_hive_swarmlords_tooltip:0 "TO DO"
-	# Single mega - adaptive job
+	civic_tec_hive_brood_cerebrates:0 "§G£tec_civic_ruler£§!Controlling Cerebrates"
+	civic_tec_hive_brood_cerebrates_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
+	civic_tec_hive_brood_cerebrates_tooltip:0 "TO DO"
+	# 1 High research/performance job, provided by a building - building type changes the type of cerebrate
 
-	civic_tec_hive_norn_queens:0 "§G£tec_civic_ruler£§!Subservient Overminds"
-	civic_tec_hive_norn_queens_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
-	civic_tec_hive_norn_queens_tooltip:0 "TO DO"
-	# norn queens = extra genetic boost
+	civic_tec_hive_brood_cerebrates_cyborg:0 "§G£tec_civic_ruler£§!Supervision Clusters"
+	civic_tec_hive_brood_cerebrates_cyborg_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
+	civic_tec_hive_brood_cerebrates_cyborg_tooltip:0 "TO DO"
+	# 1 High research/performance job, provided by a building - building type changes the type of cluster
+
+	civic_tec_hive_brood_swarmlords:0 "§G£tec_civic_ruler£§!Ascended Swarmlords"
+	civic_tec_hive_brood_swarmlords_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
+	civic_tec_hive_brood_swarmlords_tooltip:0 "TO DO"
+	# Capital provide swarmlords, military and increase output
+
+	civic_tec_hive_brood_norn_queens:0 "§G£tec_civic_ruler£§!TO DO"
+	civic_tec_hive_brood_norn_queens_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
+	civic_tec_hive_brood_norn_queens_tooltip:0 "TO DO"
+	# capital provide a Norn Empress, rest provide Norn Matriarchs
 	# focus on genetics more than eusociality
+	# 1 P
 
  # /
 # /
