--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -1009,7 +1009,7 @@ l_english:
 	district_tec_hab_extraction_effect_swap:0 "$t$- Replaceable via §Y$tec_loc_planet_decision$§!."
 	district_tec_hab_extraction_effect_orbitals:0 "\n§HCurrent Orbitals:§! $TABBED_NEW_LINE$ $tec_loc_energy$ §Y[solar_system.GetNumOrbitalsEnergy]/[solar_system.GetMaxOrbitalsEnergy]§! $TABBED_NEW_LINE$ $tec_loc_minerals$ §Y[solar_system.GetNumOrbitalsMining]/[solar_system.GetMaxOrbitalsMining]§!\n\n§HCurrent Hydroponic Boost:§! $TABBED_NEW_LINE$ $tec_loc_food$ +§Y[this.GetHydroponicNumbers]§!\n\n"
 
-	district_tec_hab_extraction_no_energy:0 "§Y$tec_loc_c_warning$ - $tec_loc_energy$ passive production has been redirected to $district_hab_energ$s§!."
+	district_tec_hab_extraction_no_energy:0 "§Y$tec_loc_c_warning$ - $tec_loc_energy$ passive production has been redirected to $district_hab_energy$s§!."
 	district_tec_hab_extraction_no_minerals:0 "§Y$tec_loc_c_warning$ - $tec_loc_minerals$ passive production has been redirected to $district_hab_mining$s§!."
 	district_tec_hab_extraction_no_food:0 "§Y$tec_loc_c_warning$ - $tec_loc_food$ passive production has been redirected to $district_tec_hab_food$s§!."
 
