--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -434,7 +434,7 @@ tec_cui_aiuth_fragment_scientist_effect: "Fragments the $tec_aiauth_ruler$ into 
 
 tec_aiauth_experience_tooltip: "\nAI Node Leaders do not gain experience normally. Spare §Y$tec_loc_sr_tec_ai_power$§! gets converted into experience, distributed in a weighted manner between AI nodes.[tec_aiauth_node_share_total_tooltip]"
 
-tec_aiauth_node_share_total_tooltip: "\n\nExperience Weight Share/Total: §Y[tec_aiauth_node_weight_tooltip]/[owner.tec_aiauth_total_weight]§!"
+tec_aiauth_node_share_total_tooltip: "\n\nExperience Weight Share/Total: §Y[tec_aiauth_node_weight_tooltip]/[owner.tec_aiauth_total_weight_text]§!"
 
 tec_can_not_dismiss_aiauth_planetary_governing_nodes: "§RCan't Dismiss Planetary AI Nodes, you must demolish the $building_tec_planetary_node_center$§!"
 
