more fixes and changes

--- a/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
+++ b/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
@@ -18,6 +18,15 @@
 # ------------------------------------------------------------
 # Colony Types
 # ------------------------------------------------------------
+ # ------------------------------------------------- Capitals
+  col_tec_capital_research:0 "Research Capital"
+  col_tec_capital_research_desc:0 "Our capital is a metropolis of research, innovation and progress."
+
+  col_tec_capital_unity:0 "Unitary Capital"
+  col_tec_capital_unity_desc:0 "Our empire has never felt more united, we will progress towards the future as one."
+  col_tec_capital_unity_spiritualist:0 "Holy Capital"
+  col_tec_capital_unity_spiritualist_desc:0 "The center of our faith, the manifestation of our creed, our central cornerstone of devotion and unification."
+ # /
  # ------------------------------------------------- Habitats
 
  # /
