--- a/localisation/english/zz_evolved_crisis_l_english.yml
+++ b/localisation/english/zz_evolved_crisis_l_english.yml
@@ -133,3 +133,40 @@
 # --------------------------- Codename CYB --------------------------------
 # Cyberocrats
 # We know what you are, what you already was, and we know oblivion awaits what you will be
+
+
+# Twisted precursors
+# --------------------------- Codename ZROBREX --------------------------------
+# Zrobrex
+# Corrupted...forgotten...vengeful...
+
+# --------------------------- Codename LASTLEAGUE --------------------------------
+# The Last League
+# TO DO
+
+# --------------------------- Codename POX --------------------------------
+# Living Pox
+# The Irassians had way more to fear of the Javorian Pox than they thought
+
+# --------------------------- Codename VULT --------------------------------
+# Ultaum
+# Reality is whatever we want!
+
+# --------------------------- Codename YUTHCOMBINE --------------------------------
+# Yuth Combine
+# You are no longer alone. You will submit to us.
+
+# --------------------------- Codename BAOLSWARM --------------------------------
+# Roots of the Infinite
+# Life will flourish, and you shall be its new fertilizer.
+
+# Twisted version of the existing crises
+# --------------------------- Codename CYBPRETHO --------------------------------
+# Prethorian Sublimators
+# Become one with us. Liberate your flesh.
+
+
+# --------------------------- Codename PSIUNBIDDEN --------------------------------
+# Heralds of the Shroud
+# [screams]
+
