fixed crusaders civic loc

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -905,7 +905,7 @@
 	# Crusader Spirit
 		civic_crusader_spirit:0 "§M£tec_civic_leader£§!Crusader Spirit"
 		civic_crusader_spirit_desc:0 "['concept_tec_leader_civic']\n\nThe lack of guidance creates weak minds - which easily succumb to corruption and plunge into decadence. This society has assumed the self-imposed mantle of bringing ''enlightenment'' to the masses through aggressive proselytizing."
-		civic_tooltip_crusader_spirit_effects:0 "$tec_loc_c_leader_bonus$ §H$tec_loc_leader_icon$ Driven Crusaders§!\n- §Y$commander_plural_with_icon$§! start with the ['concept_tec_leader_trait_par_zealot'] trait\n- §Y$general_plural_with_icon$§! start with the ['concept_tec_leader_trait_crusader'] trait\n\n$tec_loc_c_restriction$ §H$tec_loc_warning$ Ethical Liberation§!\n- Can only use ['concept_tec_policy_option_liberation_wars_alias_icon'] policy."
+		civic_tooltip_crusader_spirit_effects:0 "$tec_loc_c_leader_bonus$ §H$tec_loc_leader_icon$ Driven Crusaders§!\n- §Y$commander_plural_with_icon$§! start with the ['concept_tec_leader_trait_crusader'] trait\n\n$tec_loc_c_restriction$ §H$tec_loc_warning$ Ethical Liberation§!\n- Can only use ['concept_tec_policy_option_liberation_wars_alias_icon'] policy."
 
 		civic_crusader_spirit_corporate:0 "§M£tec_civic_leader£§!Letters of Marque"
 		civic_crusader_spirit_corporate_desc:0 "['concept_tec_leader_civic']\n\nTo combat space piracy and safeguard its borders, this megacorporation utilizes notorious pirates as military advisors and comanders for their fleets."
