--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -3182,12 +3182,94 @@ l_english:
 
 	# /
  # /
- # ------------------------------------------------- Terraform
-	building_terraformer:0 "Terraform complex"
-	building_terraformer_desc:0 "Highly advanced complex of various systems designed to create a stable atmosphere suitable for the inhabitants, producing various types of gasses and altering the ecosystem to make possible the develop of foreign species."
+ # ------------------------------------------------- Terraform & Terrasculpting
+	# Main
+		building_tec_terraformer_1:0 "Terraform complex"
+		building_tec_terraformer_1_plural:0 "$building_tec_terraformer_1$es"
+		building_tec_terraformer_1_desc:0 "Highly advanced complex of various systems designed to create a stable atmosphere suitable for the inhabitants, producing various types of gasses and altering the ecosystem to make possible the develop of foreign species."
 
-	building_terraformer2:0 "Terraform Planetary system"
-	building_terraformer2_desc:0 "A planet-wide complex of autonomous designed to create a constant and stable atmosphere suitable for the inhabitants, warding the correct development of the ecosystem."
+		building_tec_terraformer_2:0 "Terraform Planetary system"
+		building_tec_terraformer_2_plural:0 "$building_tec_terraformer_2$s"
+		building_tec_terraformer_2_desc:0 "A planet-wide complex of autonomous designed to create a constant and stable atmosphere suitable for the inhabitants, warding the correct development of the ecosystem."
+	# /
+	# Basic terraforming systems
+		# Dry
+		building_tec_terra_dry_1:0 "Aridification Relays"
+		building_tec_terra_dry_1_plural:0 "$building_tec_terra_dry_1$s"
+		building_tec_terra_dry_1_desc:0 "TO DO"
+		# Wet
+		building_tec_terra_wet_1:0 "Hydrological Complex"
+		building_tec_terra_wet_1_plural:0 "$building_tec_terra_dry_1$es"
+		building_tec_terra_wet_1_desc:0 "TO DO"
+		# Cold
+		building_tec_terra_cold_1:0 "Cooling Coils"
+		building_tec_terra_cold_1_plural:0 "$building_tec_terra_dry_1$es"
+		building_tec_terra_cold_1_desc:0 "TO DO"
+	# /
+	# Advanced terraforming systems
+		# 
+		building_tec_terra_borehole_1:0 "Thermal Borehole"
+		building_tec_terra_borehole_1_plural:0 "$building_tec_terra_dry_1$es"
+		building_tec_terra_borehole_1_desc:0 "TO DO"
+		# 
+		building_tec_terra_TODO_1:0 "TO DO"
+		building_tec_terra_TODO_1_plural:0 "$building_tec_terra_dry_1$s"
+		building_tec_terra_TODO_1_desc:0 "TO DO"
+
+		# 
+		building_tec_terra_TODO_1:0 "TO DO"
+		building_tec_terra_TODO_1_plural:0 "$building_tec_terra_dry_1$s"
+		building_tec_terra_TODO_1_desc:0 "TO DO"
+
+	# /
+	# Nanites & living metal
+		building_tec_terra_TODO_1:0 "TO DO"
+		building_tec_terra_TODO_1_plural:0 "$building_tec_terra_dry_1$s"
+		building_tec_terra_TODO_1_desc:0 "TO DO"
+	# /
+	# Unique terraforming systems
+		# 
+
+		# 
+		# Toxic & Radiation
+		building_tec_terra_recovery_1:0 "Purification Nucleus"
+		building_tec_terra_recovery_1_plural:0 "Purification Nuclei"
+		building_tec_terra_recovery_1_desc:0 "TO DO"
+
+		building_tec_terra_toxic_1:0 "Toxin Scrubber"
+		building_tec_terra_toxic_1_plural:0 "$building_tec_geo_energy_1$s"
+		building_tec_terra_toxic_1_desc:0 "TO DO"
+
+		building_tec_terra_radiation_1:0 "Radiation Scrubber"
+		building_tec_terra_radiation_1_plural:0 "$building_tec_geo_energy_1$s"
+		building_tec_terra_radiation_1_desc:0 "TO DO"
+	# /
+	# Geosculpting systems
+		# Energy
+		building_tec_geo_energy_1:0 "Ionizer Pylon"
+		building_tec_geo_energy_1_plural:0 "$building_tec_geo_energy_1$s"
+		building_tec_geo_energy_1_desc:0 "TO DO"
+		# Minerals
+		building_tec_geo_mining_1:0 "Regional Calcificator"
+		building_tec_geo_mining_1_plural:0 "$building_tec_geo_mining_1$s"
+		building_tec_geo_mining_1_desc:0 "TO DO"
+		# Food
+		building_tec_geo_farming_1:0 "Soil Enricher"
+		building_tec_geo_farming_1_plural:0 "$building_tec_geo_farming_1$s"
+		building_tec_geo_farming_1_desc:0 "TO DO"
+		# Biology
+		building_tec_geo_biology_1:0 "Biospheric Preserve"
+		building_tec_geo_biology_1_plural:0 "$building_tec_geo_biology_1$s"
+		building_tec_geo_biology_1_desc:0 "TO DO"
+		# Flora
+		building_tec_geo_flora_1:0 "Plantation Terminals"
+		building_tec_geo_flora_1_plural:0 "$building_tec_geo_flora_1$s"
+		building_tec_geo_flora_1_desc:0 "TO DO"
+		# Flora
+		building_tec_geo_volcanic_1:0 "Volcanic Forge"
+		building_tec_geo_volcanic_1_plural:0 "$building_tec_geo_volcanic_1$s"
+		building_tec_geo_volcanic_1_desc:0 "TO DO"
+	# /
  # /
  # ------------------------------------------------- Trade
 	job_tec_trade_specialist:0 "Trade Specialist"
