--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -204,6 +204,7 @@
  # Add/Remove
 	tec_can_add_civic_anglers:0 "''Main Species is §GAquatic§!''"
 	tec_can_remove_civic_anglers:0 "''Main Species is §RNOT Aquatic§!''"
+	tec_cant_remove_civic_anglers:0 "§YAquatic§! species can't remove this civic"
  # /
 # /
 
