--- a/localisation/english/zz_evolved_crisis_l_english.yml
+++ b/localisation/english/zz_evolved_crisis_l_english.yml
@@ -54,9 +54,29 @@
 # --------------------------- Codename EMG --------------------------------
 # The Emergence
  tec_emergence.101.name:0 "Anomalous Power Surge"
- tec_emergence.101.desc:0 "To Do."
- tec_emergence.101.a:0 "TO DO."
+ tec_emergence.101.desc:0 "Our measuring instruments have detected an ''impossible to measure'' energy spike with unknown origin, and the strangest byproduct of this situation is... we don't know, at least yet, what type of energy is involved in such massive surge.\n\nWe can analyze it necessary to at least identify or obtain any data that would help us understand what this anomaly entrails."
+ tec_emergence.101.a:0 "Concerning. Study it."
  tec_emergence.101.a.tooltip:0 "TO DO"
+ tec_emergence.101.a:0 "It's not worth to waste time on this."
+ tec_emergence.101.a.tooltip:0 "TO DO"
+
+ tec_emergence.10101.name:0 "The Wave"
+ tec_emergence.10101.desc:0 "To Do."
+ tec_emergence.10101.a:0 "We should study this further."
+ tec_emergence.10101.a.tooltip:0 "TO DO"
+ tec_emergence.10101.a:0 "TO DO."
+ tec_emergence.10101.a.tooltip:0 "TO DO"
+
+ tec_emergence.10102.name:0 "The Loop"
+ tec_emergence.10102.desc:0 "To Do."
+ tec_emergence.10102.a:0 "What does this all mean?"
+ tec_emergence.10102.a.tooltip:0 "TO DO"
+
+ tec_emergence.10102.name:0 "The Mirror"
+ tec_emergence.10102.desc:0 "To Do."
+ tec_emergence.10102.a:0 "Ominous..."
+ tec_emergence.10102.a.tooltip:0 "TO DO"
+
 
  tec_emergence.102.name:0 "Reflects In The Dark"
  tec_emergence.102.desc:0 "To Do."
