--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -38,7 +38,7 @@
 
 	trait_tec_og_golden_touch:0 "Sylvan Touch"
 	trait_tec_og_golden_touch_desc:0 "§LExcellence is the only accepted outcome when it comes to create, elaborate, discuss or produce something for this species, and as such a well organised and in some cases too perfect society developed around it.§!"
-	TRAIT_TEC_OG_GOLDEN_TOUCH_EFFECT:0 "Population Growth and Assembly speed: §R-50%§!\n§YBase resource production from all £job£ jobs: §G+50%§!§!\n\nBase production §Hscale§! with other modifiers\n"
+	TRAIT_TEC_OG_GOLDEN_TOUCH_EFFECT:0 "Population Growth and Assembly speed: §R-50%§!\nTotal Assimilation fail chance: §R+50%§!\n§YBase resource production from all £job£ jobs: §G+50%§!§!\n\nBase production §Hscale§! with other modifiers\n"
 
 	# Regular
 	trait_tec_vigorous:0 "Vigorous"
