fix/feat: Ai Auth xp fix and debug window

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -506,3 +506,22 @@ tec_cui_tec_ai_empire_leader_loc: "Leader (non-AI Nodes)"
  decision_tec_debug_ship_techs:0 "z-DEBUG-SHIP TECHS (£empire£)"
  decision_tec_debug_ship_techs_desc:0 "Provides all ship construction and starbase upgrade techs"
  decision_tec_debug_ship_techs_tooltip:0 "Provides all ship construction and starbase upgrade techs"
+
+# Debug Windows
+tec_debug_no: "§RNo§!"
+tec_debug_yes: "§GYes§!"
+tec_debug_na: "§YN/A§!"
+
+tec_debug.1.name: "Debugging Leader: [event_target:tec_debug_leader.GetName]"
+tec_debug.1.desc: "[event_target:tec_debug_leader.tec_debug_leader_general_info][event_target:tec_debug_leader.tec_debug_leader_ainode_info][event_target:tec_debug_leader.tec_debug_leader_pick_traits_info][event_target:tec_debug_leader.tec_debug_leader_flags_variables_info]"
+tec_debug.1.desc_general: "General Information\n--------------------------\nName: §Y[GetName]§!\nSkill Level: §Y[tec_debug_leader_level]/[tec_debug_leader_max_level]§!\nEffective Councilor Skill Level: §Y[tec_debug_leader_councilor_level]§!\nSpecies: §Y[Species.GetName]§!\nMain Species: [tec_debug_leader_is_main_species]\nBuilt Species: [tec_debug_leader_is_built_species]\nAI Node Species: [tec_debug_leader_is_aiauth_node_species]\nExpected Base Exp/Month: §Y[tec_debug_leader_experience_gain]§!\nTotal Expected Multiplier: §Y[tec_debug_leader_experience_mult]§!\nIs Idle: [tec_debug_leader_is_idle]\nIs True Idle: [tec_debug_leader_is_true_idle]\nCount Towards Leader Cap: [tec_debug_leader_count_towards_leader_cap]\nIs Ruler: [tec_debug_leader_is_ruler]\nIs Councilor: [tec_debug_leader_is_councilor]\nIs Governor: [tec_debug_leader_is_governor]"
+tec_debug.1.desc_ainode: "\n\nAI Node Information\n--------------------------\nNode Weight: §Y[tec_aiauth_node_weight_tooltip]/[owner.tec_aiauth_total_weight_text]§!\nAI Capacity to Exp: §Y[tec_debug_leader_aiauth_capacity_to_exp]§!\nAI Experience Gain Difference: §Y[tec_debug_leader_aiauth_experience_per_month_with_exp_gain]§!"
+tec_debug.1.desc_pick_traits: "\n\nPicking Traits Information\n--------------------------\nForce All Traits: [tec_debug_leader_tec_force_allow_all_traits]\nCouncilor Traits: [tec_debug_leader_can_leader_get_council_trait]\nForce Councilor Traits: [tec_debug_leader_tec_force_councilor_traits]\nNormal Traits: [tec_debug_leader_can_leader_get_normal_trait]\nForce Normal Traits: [tec_debug_leader_tec_force_normal_traits]\nSubclass Traits: [tec_debug_leader_can_leader_get_subclass_trait]\nDestiny Traits: [tec_debug_leader_can_leader_get_destiny_trait]\n"
+tec_debug.1.desc_flags: "\n\nFlags And Variables\n--------------------------\nRenowned Leader: [tec_debug_leader_flag_renowned_leader]\nLegendary Leader: [tec_debug_leader_flag_legendary_leader]\nNo Starting Leader Actions: [tec_debug_leader_flag_tec_no_starting_actions]\nFirst Handle Starting Modifiers: [tec_debug_leader_flag_tec_first_leader_handle_starting_modifiers_done]\nStarting Traits Added: §Y[tec_leader_starting_traits_modifier]/[tec_debug_leader_starting_traits_add]§!\nPatronage Traits: [tec_debug_leader_flag_tec_patronage_traits]\nPatronage Age: [tec_debug_leader_flag_tec_patronage_age]\nScience Directorate Traits: [tec_debug_leader_flag_tec_directorate_traits]\nCrusader Spirit Traits: [tec_debug_leader_flag_tec_crusader_traits]\nLetters of Marque Traits: [tec_debug_leader_flag_tec_marque_traits]\nRemnants Traits: [tec_debug_leader_flag_tec_remnant_traits]\nChampions of Empire Trait: [tec_debug_leader_flag_tec_A_CotE_traits]"
+tec_debug.1.kill_leader: "Kill Leader"
+tec_debug.1.fire_leader: "Fire Leader"
+tec_debug.1.increase_skill: "Increase Level"
+tec_debug.1.random_trait: "Random Trait"
+tec_debug.1.remove_negatives: "Remove Negative Traits"
+tec_debug.1.rerun_leader_actions: "Rerun Leader Starting on Actions"
+tec_debug.1.reset_leader: "Reset Leader To Level 1"
