--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -1,5 +1,17 @@
 ﻿l_english:
 
+# LOC
+# ------------------------------------------------------------
+	tec_loc_ap_type_biological:0 "§EBiological Ascension§!"
+	tec_loc_ap_type_technological:0 "§ETechnological Ascension§!"
+	tec_loc_ap_type_esoteric:0 "§EEsoteric Ascension§!"
+	tec_loc_ap_type_biological:0 "§EHybrid Ascension§!"
+
+	tec_loc_ap_u_situation:0 "§EStarts Situation:§!"
+	tec_loc_ap_u_tradition:0 "§EUnlocks Tradition:§!"
+	tec_loc_ap_u_tradition:0 "§EOn completion:§!"
+# /
+
 # Misc
 # ------------------------------------------------------------
 	tr_genetics_finish_extra_traits_tooltip:0 "Allows research of rare §YTransgenesis§! technologies."
