--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -210,6 +210,63 @@
 	#concept_tec_leader_civic_desc: "Leader civics are mutually exclusive, usually making §YLeaders§! of a specific type produce resources depending on their leader level and some other factors, while also removing the upkeep."
 # /
 
+# Ascensions
+	# Tiers
+	concept_tec_ascension_t1:0 "Tier I"
+	concept_tec_ascension_t1_desc:0 ""
+
+	concept_tec_ascension_t2:0 "Tier II"
+	concept_tec_ascension_t2_desc:0 ""
+	# Main
+	concept_tec_ascension_type_biological:0 "Biological Ascension"
+	concept_tec_ascension_type_biological_desc:0 "Biological Ascensions allow to reach the culprit of genetic edition and tailoring, allowing your empire to create the perfect species. It has a heavy focus on species traits and bonuses to particular productions. Genetics and Biogenics compose the main foundation of this type of Ascensions."
+	concept_tec_ascension_type_technological:0 "Technological Ascension"
+	concept_tec_ascension_type_technological_desc:0 "Technological Ascensions are grounded on a heavy use of technology to replace, either partially or completely, your empire species composition and bodies. It has a heavy focus on performance in exchange of drawbacks or radical changes. Cybernetics and Synthetic paths compose the main foundation of this type of Ascensions."
+	concept_tec_ascension_type_mystical:0 "Mystical Ascension"
+	concept_tec_ascension_type_mystical_desc:0 "Mystical Ascensions are focused on esoteric and generally non-science based elements, making your empire be in touch with non-material or at least extra-material features. It has a heavy focus on exploring the powers of the mind and other realities. Psionics and Psychic paths compose the main foundation of this type of Ascensions."
+	# Advanced
+	concept_tec_ascension_type_genetic:0 "Genetic Ascension"
+	concept_tec_ascension_type_genetic_desc:0 "."
+
+	concept_tec_ascension_type_synthetic:0 "Synthetic Ascension"
+	concept_tec_ascension_type_synthetic_desc:0 "."
+
+	concept_tec_ascension_type_cybernetic:0 "Cybernetic Ascension"
+	concept_tec_ascension_type_cybernetic_desc:0 "."
+
+	concept_tec_ascension_type_psionic:0 "Psionic Ascension"
+	concept_tec_ascension_type_psionic_desc:0 "."
+
+	# Advanced evolved
+	concept_tec_ascension_type_biogenic:0 "Biogenic Ascension"
+	concept_tec_ascension_type_biogenic_desc:0 "."
+
+	concept_tec_ascension_type_bioware:0 "Bioware Ascension"
+	concept_tec_ascension_type_bioware_desc:0 "."
+
+	concept_tec_ascension_type_psychic:0 "Psychic Ascension"
+	concept_tec_ascension_type_psychic_desc:0 "."
+
+	concept_tec_ascension_type_ethereal:0 "Ethereal Ascension"
+	concept_tec_ascension_type_ethereal_desc:0 "."
+
+	# Hybrid
+	concept_tec_ascension_type_biomechanical:0 "Biomechanical Ascension"
+	concept_tec_ascension_type_biomechanical_desc:0 "."
+
+	concept_tec_ascension_type_cyberpsionic:0 "Cyber-Psionic Ascension"
+	concept_tec_ascension_type_cyberpsionic_desc:0 "."
+
+	concept_tec_ascension_type_cyberpsychic:0 "Cyber-Psychic Ascension"
+	concept_tec_ascension_type_cyberpsychic_desc:0 "."
+
+	concept_tec_ascension_type_biopsionic:0 "Bio-Psionic Ascension"
+	concept_tec_ascension_type_biopsionic_desc:0 "."
+
+	concept_tec_ascension_type_biopsychic:0 "Bio-Psychic Ascension"
+	concept_tec_ascension_type_biopsychic_desc:0 "."
+# /
+
 # General
 	concept_tec_prime_drone: "Prime Drone"
 	concept_tec_prime_drone_icon: "£pop_cat_tec_prime_drone£ $concept_tec_prime_drone$"
